# lu23

./: README.md
subcircuit_code_64bits-old/poly-mul-over-64bits-prime/: Makefile  libpolyntt64bits.dylib
subcircuit_code_64bits-old/poly-mul-over-64bits-prime/inc/: defs.h  fast_mul_operators.h  mul_support.h  ntt_init.h  poly_mul.h  poly_ref.h  pre_compute.h
subcircuit_code_64bits-old/poly-mul-over-64bits-prime/src/: mul_support.c  ntt_init.c  poly_mul.c  poly_ref.c
subcircuit_code_64bits-old/poly-mul-over-64bits-prime/tests/: bench.c  main_test.c  test.h
subcircuit_code_64bits-old/subcircuit-64bits/: Cargo.toml  rust-toolchain.toml
subcircuit_code_64bits-old/subcircuit-64bits/benches/: subcircuit_bench.rs
subcircuit_code_64bits-old/subcircuit-64bits/examples/: bool_subcircuit.rs  subcircuit.rs
subcircuit_code_64bits-old/subcircuit-64bits/src/: bool_subcircuit.rs  booleanity.rs  lib.rs  subcircuit.rs  subcircuit_errors.rs
subcircuit_code_64bits-old/subcircuit-64bits/src/groups/: ex_schnorr.rs  group.rs  group_errors.rs  input_mapping.rs  mod.rs  random.rs  schnorr.rs  transcript.rs
subcircuit_code_64bits-old/subcircuit-64bits/src/montgomery/: mod.rs
subcircuit_code_64bits-old/subcircuit-64bits/src/polycommit/: commit_errors.rs  commitments.rs  mod.rs  univariate_poly.rs
subcircuit_code_64bits-old/subcircuit-64bits/src/polycompute/: mod.rs  poly_errors.rs  polyntt_ffi.rs
subcircuit_code_64bits-old/subcircuit-64bits/src/scalar/: mod.rs  ristretto255.rs
