[package]
name = "subcircuit_64bits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand_core = { version = "0.5", default-features = false }
rand = "0.7.3"
curve25519-dalek = {version = "=3.2.1", features = ["serde", "simd_backend"]}
subtle = { version = "2.4", default-features = false }
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
zeroize = { version = "1", default-features = false }
digest = "0.8.1"
sha3 = "0.8.2"
merlin = "3.0.0"
thiserror = "1.0"
lazy_static = "1.4.0"
num-bigint = "0.4"
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.3.1"

[lib]
name = "libsubcircuit_64bits"
path = "src/lib.rs"

[[bench]]
name = "subcircuit_bench"
harness = false